--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Papino"
         tools:targetApi="31"
-        android:networkSecurityConfig="@xml/network_security_config"
-        >
-
+        android:networkSecurityConfig="@xml/network_security_config">
 
         <activity
             android:name=".MainActivity"
@@ -29,11 +27,13 @@
         <activity
             android:name=".presentation.regestration.RegistrationActivity"
             android:exported="false" />
-        <activity
-            android:name=".presentation.regestration.EnterUserActivity"
-            android:exported="false" />
+
         <activity
             android:name=".presentation.menu.MenuActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".presentation.regestration.EnterUserActivity"
             android:exported="false" />
         <activity
             android:name=".presentation.basket.BasketActivity"
