Модуль ресторана на фрагментах

--- a/restaurant/src/main/AndroidManifest.xml
+++ b/restaurant/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
         <activity
             android:name="ru.papino.restaurant.RestaurantActivity"
             android:exported="true"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.Papino" />
     </application>
 
