--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,19 +5,15 @@
 
     <application
         android:allowBackup="true"
-        android:name=".App"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
         android:icon="@drawable/ic_for_table_phone"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Papino"
-        tools:targetApi="31"
-        android:networkSecurityConfig="@xml/network_security_config">
+        tools:targetApi="31">
 
         <activity
-            android:name=".MainActivity"
+            android:name="ru.papino.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,20 +21,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".presentation.regestration.RegistrationActivity"
-            android:exported="false" />
-
-        <activity
-            android:name=".presentation.menu.MenuActivity"
-            android:exported="false" />
-
-        <activity
-            android:name=".presentation.regestration.EnterUserActivity"
-            android:exported="false" />
-        <activity
-            android:name=".presentation.basket.BasketActivity"
-            android:exported="false" />
     </application>
 
 </manifest>
