--- a/restaurant/src/main/AndroidManifest.xml
+++ b/restaurant/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <application android:name=".App">
+    <application
+        android:name=".App"
+        android:usesCleartextTraffic="true">
         <activity
             android:name="ru.papino.restaurant.RestaurantActivity"
             android:exported="true"
